--- a/index.html
+++ b/index.html
@@ -126,6 +126,24 @@
       </div>
     </a>
     </div>
+    <div class="carousel-item">
+      <a href="https://samwolfdesign.github.io/GIPHYAPI3/" target="_blank" rel="noopener noreferrer">
+      <img src="../Portfolio/Assets/kyivHighwayNight.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Blue Badge Projects</h5>
+        <p>Good things to come, stay tuned!!</p>
+      </div>
+    </a>
+    </div>
+    <div class="carousel-item">
+      <a href="https://samwolfdesign.github.io/GIPHYAPI3/" target="_blank" rel="noopener noreferrer">
+      <img src="../Portfolio/Assets/cafePripyat.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Red Badge Projects</h5>
+        <p>Good things to come, stay tuned!!</p>
+      </div>
+    </a>
+    </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
